--- a/ApnaBank/ApnaBank/ApnaBank.csproj
+++ b/ApnaBank/ApnaBank/ApnaBank.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ApnaBank</RootNamespace>
     <AssemblyName>ApnaBank</AssemblyName>
-    <TargetFrameworkVersion>net6.0</TargetFrameworkVersion>
+    <TargetFramework>net6.0</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
